2008-08-05  Tor Arne Vestbø  <tavestbo@trolltech.com>

Reviewed by Simon.

        Move event handling of the return-key from EditorClientQt to QWebPage.

        https://bugs.webkit.org/show_bug.cgi?id=20191

        This is a first step in refactoring the big switch block
        in EditorClientQt::handleKeyboardEvent to using WebActions
        instead.

        The new logic uses two new StandardKeys from QKeySequence:

        - InsertParagraphSeparator
        - InsertLineSeparator

        Which translate to the commands InsertNewline and InsertLineBreak
        respectivly. On Windows/X11 pressing the shift modifier will invoke
        the latter action. For Mac this is triggered by pressing the meta
        modifier (Ctrl).

        Initial patch by: Erik Bunce

Canonical link: https://commits.webkit.org/27973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35558 268f45cc-cd09-0410-ab3c-d52691b4dbfc