WebKit/qt/WebCoreSupport/EditorClientQt.cpp
@@ -344,9 +344,18 @@ void EditorClientQt::handleKeyboardEvent(KeyboardEvent* event)
     // FIXME: refactor all of this to use Actions or something like them
     if (start->isContentEditable()) {
         switch (kevent->windowsVirtualKeyCode()) {
+#if QT_VERSION < 0x040500
             case VK_RETURN:
-                frame->editor()->command("InsertLineBreak").execute();
+#ifdef QT_WS_MAC
+                if (kevent->shiftKey() || kevent->metaKey())
+#else
+                if (kevent->shiftKey())
+#endif
+                    frame->editor()->command("InsertLineBreak").execute();
+                else
+                    frame->editor()->command("InsertNewline").execute();
                 break;
+#endif
             case VK_BACK:
                 frame->editor()->deleteWithDirection(SelectionController::BACKWARD,
                         CharacterGranularity, false, true);
